# wiki-agent

./: .env.example  .gitignore  .gitmodules  .impeccable.md  AGENT.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
python-core/: build_sidecar.py  pyproject.toml  run_sidecar.py
python-core/tests/: test_config.py  test_ingest.py  test_search_web.py
python-core/wiki_agent/: agent_graph.py  api.py  config.py  embedder.py  ingest.py  memory.py  search_web.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
